# bachelor_thesis

./: Cargo.toml  compose.yaml
client/: Cargo.toml  Dockerfile  measurement_1KB_1GB.csv  measurement_1MB_4MB_repeat_40.csv  measurement_1MB_5MB_random(2).csv  start.sh
client/src/: constants.rs  main.rs  message_body.rs  record.rs
common/: Cargo.toml  example.csv
common/src/: lib.rs
experiments/: main.py  visualization_script.ipynb
experiments/data/: measurement_1MB_4MB.csv
experiments/docker_data/: eth_non_tc.csv
experiments/evaluation/: baseline.py  baseline_percentile.py  evaluation.py  experiment.py  preprocess.py  result.py  visualization.py
experiments/measurements/: m0_500KB_3MB1.csv  m0_500KB_3MB2.csv  m0_500KB_3MB3.csv  m0_500KB_3MB4.csv  m2_1KB1.csv  m2_1KB2.csv  m2_1KB3.csv  m2_1KB4.csv
experiments/prediction/: historical_data.py  prediction_model.py
experiments/src/evaluation/: evaluation.py  visualization.py
experiments/src/experiement/: experiment.py  result.py
experiments/src/prediction/: baseline_percentile.py  historical_data.py  historical_data_msg.py  lookup_table.py  prediction_model.py
measurements/: 500KB_6MB_random.csv
plotting/: example4.csv  main.py  measurement_1MB_4MB_repeat_1000.csv  requirements.txt
server/: Cargo.toml  Dockerfile  start.sh
server/src/: main.rs
