[package]
name = "bachelor_thesis"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["client", "server", "common", "experiment"]

[[bin]]
name = "client"
path = "/client/src/main.rs"

[[bin]]
name = "server"
path = "/server/src/main.rs"

[[bin]]
name = "experiment"
path = "experiment/src/main.rs"

[lib]
name = "common"
path = "/common/src/lib.rs"
#crate-type = ["rlib"]
