[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "common"
crate-type = ["rlib"]

[dependencies]
quiche = "0.20.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
csv = "1.3.0"
plotters = "0.3.5"
ndarray = "0.15.6"
uuid = { version = "1.6.1", features = ["v4", "fast-rng","macro-diagnostics"] }
rand = "0.8.5"