[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quiche = "0.20.0"
mio = { version = "0.8", features = ["net", "os-poll"] }
ring = "0.17.7"
rand = "0.8.5"
config = { version = "0.13.4", features = [] }
time = "0.3.31"
url = "2.5.0"
hmac = { version = "0.13.0-pre.1", features = [] }
log = "0.4.20"
